kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soar-system
  labels:
    name: soar-system
    environment: dev
